kubernetes-12/3.4/src/nginx-canary.19.nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app-node-port-19
  namespace: nginx-canary
spec:
  type: NodePort
  selector:
    app: nginx-app-19
  ports:
    - name: web-nginx
      port: 9001
      targetPort: 80
      nodePort: 30081
    - name: web-mtools
      port: 9002
      targetPort: 8080
      nodePort: 30881
