kubernetes-12/3.4/src/nginx-canary.20.nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app-node-port-20
  namespace: nginx-canary
spec:
  type: NodePort
  selector:
    app: nginx-app-20
  ports:
    - name: web-nginx
      port: 9001
      targetPort: 80
      nodePort: 30080
    - name: web-mtools
      port: 9002
      targetPort: 8080
      nodePort: 30880
