kubernetes-12/3.4/src/nginx-canary.ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: echo
  namespace: nginx-canary
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: 
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: nginx-service-19
              port:
                number: 9003
        - pathType: ImplementationSpecific
          backend:
            service:
              name: nginx-service-20
              port:
                number: 9003
